--- a/index.html
+++ b/index.html
@@ -34,5 +34,30 @@
         </div> <!-- Interface -->
     </header>
 
+    <main>
+        <section class="topo-do-site">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt-topo-site">
+                        <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
+                        <p>
+                            A criatividade e a inovação são os pilares essenciais, onde a arte se funde com a tecnologia para criar experiências digitais envolventes e impactantes.
+                        </p>
+
+                        <div class="btn-contato">
+                            <a href="#">
+                                <button>Entre em contato</button>
+                            </a>
+                        </div>
+                    </div> <!-- txt-topo-site -->
+
+                    <div class="img-topo-site">
+                        <img src="imagens/foto.png" alt="">
+                    </div> <!-- img topo site -->
+                </div><!-- Flex -->
+            </div> <!-- Interface -->
+        </section> <!-- topo-do-site -->
+    </main> <!-- Main -->
+
 </body>
 </html>
