--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!--FIM DO GOOGLE FONTS-->
+    <!--BOOSTSTRAP ICONS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--FIM BOOTSTRAP ICONS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
     <title>Portifólio Arthur</title>
 </head>
@@ -57,7 +63,39 @@
                 </div><!-- Flex -->
             </div> <!-- Interface -->
         </section> <!-- topo-do-site -->
+        
+        <section class="especialidades">
+            <div class="interface">
+                <h2 class="titulo">MINHAS <span>ESPECIALIDADES.</span></h2>
+                <div class="flex">
+                    <div data-aos="fade-up" class="especialidades-box">
+                        <i class="bi bi-code-square"></i>
+                        <h3>Website</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ipsa pariatur dignissimos possimus non.</p>
+                    </div><!--especialidades-box-->
+                    <div data-aos="fade-up" class="especialidades-box">
+                        <i class="bi bi-filetype-html"></i>
+                        <h3>HTML 5</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ipsa pariatur dignissimos possimus non.</p>
+                    </div><!--especialidades-box-->
+                    <div data-aos="fade-up" class="especialidades-box">
+                        <i class="bi bi-filetype-css"></i>
+                        <h3>CSS 3</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ipsa pariatur dignissimos possimus non.</p>
+                    </div><!--especialidades-box-->
+                </div><!--Flex-->
+            </div><!--Interface-->
+        </section> <!--Especialidades-->
     </main> <!-- Main -->
-
+    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js">
+    </script>
+    <script>
+        AOS.init(
+            {
+                duration: 700,
+            }
+        );
+      </script>
 </body>
 </html>
