--- a/index.html
+++ b/index.html
@@ -86,6 +86,32 @@
                 </div><!--Flex-->
             </div><!--Interface-->
         </section> <!--Especialidades-->
+    
+        <section class="sobre">
+            <div data-aos="fade-up" class="interface">
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="imagens/foto.png" alt="" width="350px">
+                    </div><!--Img Sobre-->
+                    <div class="txt-sobre">
+                        <h2>MUITO PRAZER, <span>SOU JOSÉ ARTHUR.</span></h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque impedit consequuntur incidunt nam ipsam harum quo ullam! Odio sit nobis officiis accusamus inventore deserunt, laboriosam itaque, impedit necessitatibus dolor veniam.</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta facere minima ut fuga deserunt enim amet eius, consequatur rerum. Aliquid necessitatibus autem magnam expedita rem animi distinctio consequuntur illum soluta!</p>
+                        <div class="btn-social">
+                            <a href="#"><button>
+                                <i class="bi bi-instagram"></i>
+                            </button></a>
+                            <a href="#"><button>
+                                <i class="bi bi-github"></i>
+                            </button></a>
+                            <a href="#"><button>
+                                <i class="bi bi-linkedin"></i>
+                            </button></a>
+                        </div>
+                    </div> <!-- txt sobre-->
+                </div><!--Flex-->>
+            </div> <!--Interface-->
+        </section> <!--SOBRE-->
     </main> <!-- Main -->
     
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js">
@@ -93,7 +119,7 @@
     <script>
         AOS.init(
             {
-                duration: 700,
+                duration: 1200,
             }
         );
       </script>
