--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@
                 <div class="flex">
                     <div data-aos="fade-up" class="especialidades-box">
                         <i class="bi bi-code-square"></i>
-                        <h3>Website</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ipsa pariatur dignissimos possimus non.</p>
+                        <h3>HTML 5</h3>
+                        <p> Essa é a linguagem fundamental para criar a estrutura e o conteúdo de uma página da web.</p>
                     </div><!--especialidades-box-->
                     <div data-aos="fade-up" class="especialidades-box">
                         <i class="bi bi-filetype-html"></i>
-                        <h3>HTML 5</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ipsa pariatur dignissimos possimus non.</p>
+                        <h3>CSS 3</h3>
+                        <p>O CSS é usado para estilizar o HTML e controlar a apresentação, layout e design das páginas da web.</p>
                     </div><!--especialidades-box-->
                     <div data-aos="fade-up" class="especialidades-box">
                         <i class="bi bi-filetype-css"></i>
-                        <h3>CSS 3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ipsa pariatur dignissimos possimus non.</p>
+                        <h3>Java Script</h3>
+                        <p>É uma linguagem de programação fundamental para a web, usada para adicionar interatividade e dinamismo às páginas. Além do JavaScript, o framework React.js.</p>
                     </div><!--especialidades-box-->
                 </div><!--Flex-->
             </div><!--Interface-->
